<resources>
    <string name="app_name">EffectiveMobileTest</string>

    <string name="menu_search">Поиск</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_response">Отклик</string>
    <string name="menu_message">Сообщения</string>
    <string name="menu_profile">Профиль</string>

    <string name="search_hint_text">Должность, ключевые слова</string>
    <string name="search_hint_post">Должность, по подходящим вакансиям</string>
    <string name="title_vacancies_for_you">Вакансии для вас</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_your_task">Ваши задачи</string>
    <string name="title_enter_in_profile">Вход в личный кабинет</string>
    <string name="count_viewers">Сейчас просматривает %1$d человек%2$s</string>
    <string name="count_viewers_now">%1$d человек%2$s cейчас смотрят</string>
    <string name="count_of_responses">%1$d человек%2$s уже откликнул%3$s</string>
    <string name="count_vacancies_inclined">%1$d ваканси%2$s</string>
    <string name="button_count_vacancies_inclined">Еще %1$d ваканси%2$s</string>
    <string name="button_respond">Откликнуться</string>
    <string name="button_map">Карта</string>
    <string name="by_correspondence">По соответствию</string>
    <string name="aks_questions">Задайте вопрос работодателю</string>
    <string name="resive_response">Он получит его с откликом на вакансию</string>
    <string name="experience_of_detail">Требуемый опыт: %1$s</string>

    <string name="published_date">Опубликовано %1$s</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_favorite_feature">Избранное</string>
    <string name="add_covering">Добавить сопроводительное</string>
    <string name="resume_for_response">Резюме для отклика</string>
    <string name="resume_name">Abap-разработчик</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="enter_in_profile">Вход в личный кабинет</string>
    <string name="enter_by_mail">Продолжить</string>
    <string name="enter_by_pass">Войти с паролем</string>
    <string name="enter_top_title">Поиск работы</string>
    <string name="enter_bottom_title">Поиск сотрудников</string>
    <string name="enter_bottom_text">Размещение вакансий и доступ к базе резюме</string>
    <string name="enter_bottom_button">Я ищу сотрудников</string>
    <string name="send_email_to">Отправили код на %1$s</string>
    <string name="login_confirmation">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm_star">*</string>

</resources>