<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_default"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_default"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/responseFragment"
        android:icon="@drawable/ic_response_default"
        android:title="@string/menu_response" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_messages_default"
        android:title="@string/menu_message" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_default"
        android:title="@string/menu_profile" />
</menu>